tests/ui/consts/const-eval/unused-broken-const-late.stderr
error[E0080]: evaluation of `PrintName::<i32>::VOID` failed
  --> $DIR/unused-broken-const-late.rs:8:22
   |
LL |     const VOID: () = panic!();
   |                      ^^^^^^^^ the evaluated program panicked at 'explicit panic', $DIR/unused-broken-const-late.rs:8:22
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
